<resources>
    <string name="app_name">BabysitterFinder</string>

    <!-- Firebase Messaging -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">BabySitterFinder Channel</string>

    <!-- Main Activity -->
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register_now">Don\'t have an account? Register</string>
    <string name="no_register_mode_selected">You have to select what you register as to continue registration</string>

    <!-- Register Mode Dialog -->
    <string name="mode_prompt">Register as</string>
    <string name="babysitter_response">Babysitter</string>
    <string name="user_response">Regular User</string>

    <string name="registration">Registration</string>
    <string name="next">next</string>

    <!-- Account Info Registration -->
    <string name="account_info_prompt">Fill in your account info bellow</string>
    <string name="password_hint">Password (min 6 chars)</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="not_filled_email_address">Fill in your email address</string>
    <string name="no_valid_email">Enter a valid email address</string>
    <string name="not_filled_password">Fill in a password</string>
    <string name="no_valid_password">Password must consist of at least 4 characters</string>
    <string name="not_filled_confirmation">Confirm your password</string>
    <string name="no_valid_confirmation">Password mismatched</string>

    <!-- Personal Info Registration -->
    <string name="personal_info_prompt">Fill in your personal info bellow</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone Number</string>
    <string name="date_born">Date Born</string>
    <string name="sex_prompt">Select your sex</string>
    <string name="not_filled_name">Fill in your full name</string>
    <string name="not_filled_phone">Fill in your phone number</string>
    <string name="no_valid_phone">Enter a valid phone number</string>
    <string name="not_filled_born_date">Fill in the date you were born</string>
    <string name="no_valid_born_date">You either too young for this app or you mis-entered your birthday</string>
    <string name="no_sex_selected">Select your sex</string>

    <!-- Working Info Registration -->
    <string name="working_info_prompt">Fill in the following info to be able to get job offers:</string>
    <string name="street_address">Street address</string>
    <string name="charging">Charging per hour</string>
    <string name="currency">Currency</string>
    <string name="working_hours_prompt">Select your working hours:</string>
    <string name="all_day">All day</string>
    <string name="not_filled_street">Fill in your street address</string>
    <string name="not_filled_charges">Fill in your charges</string>
    <string name="not_filled_currency">Fill in your currency</string>

    <!-- Sitter additional info -->
    <string name="additional_info_prompt">Fill in some additional info</string>
    <string name="additional_info_privacy">These are only helping us to give you the most accurate and desired offers to you depending on your preferences. It won\'t be visible on your public profile.</string>
    <string name="max_kids">Max number of kids at the same time</string>
    <string name="min_age">Min age of kid taking care of</string>
    <string name="not_filled_max_kids">Set max number of kids</string>
    <string name="not_filled_min_age">Set min age of kid</string>

    <!-- Add new TimeSlot -->
    <string name="day_prompt">Choose a day</string>
    <string name="from_hour_hint">From hour</string>
    <string name="to_hour_hint">To Hour</string>
    <string name="select_tine_period_prompt">Select Time Period</string>
    <string name="or_all_day">Or Select All Day Sitting</string>
    <string name="weekly_note">if selected, specific dates above will be ignored, and will be transformed to general weekly info</string>
    <string name="select_all_day_prompt">All Day (6:00 – 24:00)</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="day_toast">Please select a day</string>
    <string name="previous">previous</string>
    <string name="not_filled_from">Set from hour</string>
    <string name="not_filled_to">Set to hour</string>
    <string name="weekly">Weekly</string>
    <string name="sitting_date">Sitting date</string>
    <string name="finally_select_if_applied">Finally Select if Applied</string>

    <string-array name="days">
        <item>Choose a day</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="timeslot_added">Time Slot Added</string>
    <string name="no_time_slot_added">You have to add at least one time slot</string>

    <!-- Add TimeSlot -->
    <string name="add_time_slot_title">Add New TimeSlot</string>

    <!-- Registration Sitter Main Screen - Java Side -->
    <string name="currency_picker">CURRENCY_PICKER</string>
    <string name="select_currency_prompt">Select Currency</string>

    <!-- Intent Extras -->
    <string name="interest_key">InterestKey</string>
    <string name="sitter_value">Sitter</string>
    <string name="user_value">User</string>

    <!-- Additional info Sitter -->
    <string name="introduction_prompt">Fill in any comment or introduction (Optional)</string>
    <string name="introduction_privacy">This is going to be displayed on your profile and be visible to all users searching for a sitter</string>
    <string name="saving">Saving</string>
    <string name="done">Done</string>

    <string name="orientation_bundle_key">orientation</string>

    <!-- Find Sitter -->
    <string name="sitter_search">Sitter Search</string>
    <string name="babysitter_time_needed">Add the time you need babysitter</string>
    <string name="skip">skip</string>
    <string name="num_of_kids">Number of kids to be babysitted</string>
    <string name="sitting_needs_prompt">Add some core info about the sitting you need</string>
    <string name="preferable_sitter_sex">Preferable sitter\'s sex</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="any">any</string>
    <string name="total_kids">Set total kids number</string>
    <string name="youngest_kid">Set the youngest kid\'s age</string>
    <string name="sitting_address">Set address for the babysitting</string>
    <string name="not_filled_sitter_sex">Select sister\'s sex</string>
    <string name="matching_sitters">matching sitters…</string>

    <!-- Available Sitters Result -->
    <string name="sitters_results">Available Sitters</string>
    <string name="select_a_sitter">Select a sitter</string>

    <!-- Upload Photo -->
    <string name="upload_file">Upload profile photo</string>
    <string name="take_photo"> Take Photo</string>
    <string name="gallery"> Choose from Gallery</string>
    <string name="no_selected_upload">No way of providing photo selected</string>
    <string name="permissions_not_granted">Cannot continue if permissions not granted!</string>
    <string name="profile">Sitter\'s Profile</string>
    <string name="age">age</string>
    <string name="phone_label">phone</string>
    <string name="already_user">You are already registered</string>
    <string name="reset">Reset</string>
    <string name="reset_mail_toast">An email has been sent to reset your password</string>
    <string name="reset_visibility_key">ResetVisibility</string>
    <string name="years_old">years old</string>
    <string name="arrange">arrange</string>
    <string name="edit">  edit</string>
    <string name="to_hour_less_than">You have to select value greater than the from hour value</string>
    <string name="logged">logged in!</string>
    <string name="appointments_label">Here are all your appointments</string>
    <string name="no_appointments">There are no appointments</string>
    <string name="profile_icon">Profile</string>
    <string name="sitter_mng">Sitter Management</string>
    <string name="user_mng">User Management</string>
    <string name="disconected">You have been disconected!</string>
    <string name="please_wait">Please wait...</string>
    <string name="diconect">You have been disconnected!</string>
    <string name="mode_save_inst_key">mode_save_instance_key</string>
    <string name="registerDialog">RegisterDialog</string>
    <string name="no_user">There is no user record corresponding</string>
    <string name="upload_photo_si_key">upload_photo_dialog_key</string>
    <string name="photo_uploaded">Photo Uploaded</string>
    <string name="error_occurred">An error have occurred!</string>
    <string name="pending_toast">Appointment Arranged! Please wait for sitters confirmation</string>
    <string name="phot_not_selected">Please select a photo profile first!</string>
    <string name="uploading_title">Uploading Image...</string>
    <string name="uploaded">Uploaded</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="appointments_label_widget">Here are your Appointments</string>
    <string name="select_a_group_widget">Select a group</string>
    <string name="widget_config_explaination">The widget will display these kind of appointments</string>
    <string name="weekly_appointments">Weekly Appointments</string>
    <string name="simple_appointments">Simple Appointments</string>
    <string name="both">Both</string>
    <string name="ready">Ready</string>
    <string name="select_group_toast">You have to select a group</string>
    <string name="each_week">for each week</string>
</resources>
