<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/divider_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/horizontal_margin"
        android:text="@string/select_a_group_widget"
        android:textSize="@dimen/h5_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/horizontal_margin"
        android:text="@string/widget_config_explaination" />

    <RadioGroup
        android:id="@+id/radio_appointments_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/divider_margin"
        android:paddingStart="@dimen/divider_margin">

        <RadioButton
            android:id="@+id/radio_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly_appointments" />

        <RadioButton
            android:id="@+id/radio_simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_appointments" />

        <RadioButton
            android:id="@+id/radio_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both" />
    </RadioGroup>

    <Button
        android:id="@+id/ready_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:background="@drawable/log_in_button_bg"
        android:text="@string/ready" />

</LinearLayout>